--- a/main.css
+++ b/main.css
@@ -19,10 +19,10 @@ body {
 	order:1;
 	color:#000000;
 	float:right;
-	margin-left:auto;
+	margin-left:10%;
 	font-size: 120%;
 	font-family:"Courier New", Courier, monospace;
-	margin-top:10px;
+	margin-top:3%;
 	position: relative;
 
 }
@@ -30,7 +30,7 @@ body {
 	order:2;
 	margin-left:auto;
 	margin-right:auto;
-	margin-top:150px;
+	margin-top:5%;
 	width:60%;
 	height:60%;
 	padding-left:50px;
@@ -53,23 +53,22 @@ body {
 	display:inline;
 	float:left;
 	width:30%;
-	padding-left:10px;
+	padding-left:3%;
 
 
 }
 .work img {
-	padding-left:40px;
+	padding-left:5%;
 	height:150px;
-	padding-left:10px;
+	width:80%;
 
 }
 .contact {
 	list-style-type: none;
 	font-family:"Ubuntu", Arial, sans-serif;
-	padding-top:200px;
-	position: absolute;
+	padding-top:10%;
 	order:0;
-	font-size:150%;
+	width:40%;
 }
 .logo {
 	width:10%;
